# big-network-info

./: LICENSE  README.md  default.nix  flake.nix  pyproject.toml
locale/: bg.po  big-network-info.pot  cs.po  da.po  de.po  el.po  en.po  es.po  et.po  fi.po  fr.po  he.po  hr.po  hu.po  is.po  it.po  ja.po  ko.po  nl.po  no.po  pl.po  pt.po  ro.po  ru.po  sk.po  sv.po  tr.po  uk.po  zh.po
pkgbuild/: PKGBUILD
src/big_network_info/: __init__.py  __main__.py
src/big_network_info/core/: __init__.py  config.py  network_diagnostics.py  scanner.py  wifi_scanner.py  wol.py
src/big_network_info/gui/: __init__.py  components.py  config_view.py  main_window.py  translation.py  wifi_analyzer.py
src/core/: __init__.py  network_diagnostics.py  services.py
src/gui/: components.py  config_view.py  main_window.py  translation.py
src/utils/: network.py  pdf_exporter.py
usr/share/applications/: br.com.biglinux.networkinfo.desktop
usr/share/biglinux/network-info/: main.py
usr/share/biglinux/network-info/src/: __init__.py
usr/share/locale/bg/LC_MESSAGES/: big-network-info.mo
usr/share/locale/cs/LC_MESSAGES/: big-network-info.mo
usr/share/locale/da/LC_MESSAGES/: big-network-info.mo
usr/share/locale/de/LC_MESSAGES/: big-network-info.mo
usr/share/locale/el/LC_MESSAGES/: big-network-info.mo
usr/share/locale/en/LC_MESSAGES/: big-network-info.mo
usr/share/locale/es/LC_MESSAGES/: big-network-info.mo
usr/share/locale/et/LC_MESSAGES/: big-network-info.mo
usr/share/locale/fi/LC_MESSAGES/: big-network-info.mo
usr/share/locale/fr/LC_MESSAGES/: big-network-info.mo
(+30 files in other folders)
